gccida/g1/set_mem_attributes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2170:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2182:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2183:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2185:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2190:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2191:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2198:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)ref[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2201:21: error: expected expression
v6 = *( tree_node **)( v5 + 8); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2201:9: error: use of undeclared identifier 'tree_node'
v6 = *( tree_node **)( v5 + 8); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2211:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
size_unit = (  struct rtx_def *)ref[1]; 
                                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2219:19: error: expected expression
v6 = ( tree_node *)ref[1]; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2219:8: error: use of undeclared identifier 'tree_node'
v6 = ( tree_node *)ref[1]; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2223:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)ref[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2241:35: error: expected expression
if ( v9 == 100 && t->decl.rtl ==  struct ref ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2250:7: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( !lang_hooks_0.honor_readonly 
      ^~~~~~~~~~~~
      lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2327:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)ref + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2333:20: error: expected expression
v18 = ( tree_node *)*( &global_trees + 15); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2333:9: error: use of undeclared identifier 'tree_node'
v18 = ( tree_node *)*( &global_trees + 15); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/emit-rtl.c:2355:68: error: use of undeclared identifier 'machine_mode'
mem_attrs = get_mem_attrs( alias, v6, offseta, size_unit, align, ( machine_mode)*( ( unsigned __int8 *)ref + 2)); 
                                                                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/set_mem_attributes/src/obj/emit-rtl.o] Error 1
